force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/HealthCloudGA__EhrImmunization__c.object-meta.xml
<CustomObject>
    <description>Immunization event information.</description>
    <label>EHR Immunization</label>
    <nameField>
        <displayFormat>Immu-{0}</displayFormat>
        <label>EHR Immunization ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Immunizations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>