force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__Account__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Immunizations</relationshipLabel>
    <relationshipName>Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>