force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__DoseQuantityUnits__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DoseQuantityUnits__c</fullName>
    <label>Dose Quantity Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>