force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__DoseQuantityValue__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DoseQuantityValue__c</fullName>
    <label>Dose Quantity Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>