force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__IsRestricted__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IsRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRestricted</label>
    <type>Checkbox</type>
</CustomField>