force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__LocationLine2__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationLine2__c</fullName>
    <label>Location Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>