force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__LocationPostalCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationPostalCode__c</fullName>
    <label>Location Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>