force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__LocationStartDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationStartDate__c</fullName>
    <label>Location Start Date</label>
    <type>DateTime</type>
</CustomField>