force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__LocationState__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationState__c</fullName>
    <label>Location State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>