force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__LocationTelecom__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationTelecom__c</fullName>
    <label>Location Telecom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>