force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__LocationText__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationText__c</fullName>
    <label>Location Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>