force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__LocationType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationType__c</fullName>
    <label>Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>