force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__LotNumber__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LotNumber__c</fullName>
    <label>Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>