force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__Patient__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
    <relationshipLabel>Immunizations</relationshipLabel>
    <relationshipName>Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>