force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__Performer__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Performer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performer</label>
    <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
    <relationshipLabel>Immunizations Performed</relationshipLabel>
    <relationshipName>ImmunizationsPerformed</relationshipName>
    <type>Lookup</type>
</CustomField>