force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__ReasonLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReasonLabel__c</fullName>
    <label>Reason Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>