force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__Requester__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
    <relationshipLabel>Immunizations Requested</relationshipLabel>
    <relationshipName>ImmunizationsRequested</relationshipName>
    <type>Lookup</type>
</CustomField>