force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__RouteCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RouteCode__c</fullName>
    <description>Route Symbol in syntax defined by the system</description>
    <label>Route Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>