force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__SiteCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SiteCode__c</fullName>
    <description>Site Symbol in syntax defined by the system</description>
    <label>Site Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>