force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__SiteLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SiteLabel__c</fullName>
    <label>Site Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>