force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/HealthCloudGA__VaccineTypeLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__VaccineTypeLabel__c</fullName>
    <label>Vaccine Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>