force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/vxDose_Sequence__c.field-meta.xml
<CustomField>
    <fullName>vxDose_Sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Position in Vaccine Schedule sequence. e.g. 2 equals second dose</description>
    <inlineHelpText>Position in Vaccine Schedule sequence. e.g. 2 equals second dose</inlineHelpText>
    <label>Dose Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>