force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/vxOffset__c.field-meta.xml
<CustomField>
    <fullName>vxOffset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Technical field to calculate planned date for a vaccine administration</description>
    <label>Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>