force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/vxPatient_Vaccination_Schedule__c.field-meta.xml
<CustomField>
    <fullName>vxPatient_Vaccination_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Patient Vaccine Schedule associated with this immunisation record</description>
    <inlineHelpText>The Patient Vaccine Schedule associated with this immunisation record</inlineHelpText>
    <label>Patient Vaccination Schedule</label>
    <referenceTo>vxPatient_Vaccination_Schedule__c</referenceTo>
    <relationshipLabel>EHR Immunizations</relationshipLabel>
    <relationshipName>EHR_Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>