force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/vxPlanned_Administration_Date__c.field-meta.xml
<CustomField>
    <fullName>vxPlanned_Administration_Date__c</fullName>
    <description>Intended Vaccine Administration Date based on the Vaccine Schedule</description>
    <inlineHelpText>Intended Vaccine Administration Date based on the Vaccine Schedule</inlineHelpText>
    <label>Planned Administration Date</label>
    <type>Date</type>
</CustomField>