force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/vxStatus__c.field-meta.xml
<CustomField>
    <fullName>vxStatus__c</fullName>
    <description>Status of Vaccine Administration</description>
    <inlineHelpText>Status of Vaccine Administration</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Given</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Given in Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>