force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/vxVaccine_Product__c.field-meta.xml
<CustomField>
    <fullName>vxVaccine_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product record for this vaccine</description>
    <inlineHelpText>Vaccine Product</inlineHelpText>
    <label>Vaccine Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vaccine</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>EHR Immunizations</relationshipLabel>
    <relationshipName>EHR_Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>