force-app/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/vxVaccine_Stock_Asset__c.field-meta.xml
<CustomField>
    <fullName>vxVaccine_Stock_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Asset record holds the vaccine Batch/Lot number and the stock used for this vaccine administration</description>
    <inlineHelpText>Vaccine Batch/Lot number and the stock used for this vaccine administration</inlineHelpText>
    <label>Vaccine Stock Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vaccine</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>EHR Immunizations</relationshipLabel>
    <relationshipName>EHR_Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>